<resources>
    <string name="app_name">test</string>
    <string name="quick_deliv">
        Quick Delivery At Your Doorstep
    </string>
    <string name="enjoy_quick">
        Enjoy quick pick-up and delivery to your destination
    </string>
    <string name="skip">
                Skip
            </string>
    <string name="next">
                Next
            </string>
    <string name="onboarding_4_heading">
        Flexible Payment
    </string>
    <string name="onboarding_4_text">
        Different modes of payment either before and after delivery without stress
    </string>
    <string name="onboarding_3_heading">
         Real-time Tracking
    </string>
    <string name="onboarding_3_text">
        Track your packages/items from the comfort of your home till final destination
    </string>
    <string name="create_an_a">
            Create an account
        </string>
    <string name="complete_th">
            Complete the sign up process to get started
        </string>
    <string name="lablename">
                Full name
            </string>
    <string name="text">
                Ivanov Ivan
            </string>
    <string name="phone_label">
                Phone Number
            </string>
    <string name="phone_text">
               +7(999)999-99-99
            </string>
    <string name="email_label">
                Email Address
            </string>
    <string name="email_text">
                ***********@mail.com
            </string>
    <string name="pass_label">
                Password
            </string>
    <string name="pass_text">
                **********
            </string>
    <string name="pass_conf_label">
                Confirm Password
            </string>
    <string name="by_ticking_">
        By ticking this box, you agree to our Terms and conditions and private policy
    </string>
    <string name="sign_up">
            Sign Up
        </string>
    <string name="already_hav">
            Already have an account?
        </string>
    <string name="sign_in">
                Sign in
            </string>
    <string name="or_sign_in_">
            or sign in using
        </string>
    <string name="welcome_bac">
            Welcome Back
        </string>
    <string name="fill_in_you">
            Fill in your email and password to continue
        </string>
    <string name="remember_pa">
                Remember password
            </string>
    <string name="forgot_pass_">
            Forgot Password?
        </string>
    <string name="forgot_pass">
            Forgot Password
        </string>
    <string name="enter_your_">
            Enter your email address
        </string>
    <string name="send_otp">
            Send OTP
        </string>
    <string name="remember_pass_back">
                Remember password? Back to
            </string>
    <string name="otp_verific">
            OTP Verification
        </string>
    <string name="enter_the_6">
            Enter the 6 digit numbers sent to your email
        </string>
    <string name="if_you_didn">
            If you did not receive code, resend after
        </string>
    <string name="timer">1:00</string>
    <string name="set_new_pas">
        Set New Password
    </string>
    <string name="new_passwor">
            New Password
        </string>
    <string name="enter_new_p">
            Enter new password
        </string>
    <string name="log_in">
        Log in
    </string>
    <string name="home">
            Home
        </string>
    <string name="wallet">
            Wallet
        </string>
    <string name="track">
            Track
        </string>
    <string name="profile">
            Profile
        </string>
    <string name="hello_ken">
          Hello Ken
        </string>
    <string name="current_bal">
          Current balance:
        </string>
    <string name="balance">
          N10,712:00
        </string>
    <string name="enable_dark">
        Enable dark Mode
      </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_profil">
            Edit Profile
          </string>
    <string name="name_phone_">
            Name, phone no, address, email ...
          </string>
    <string name="statements_">
            Statements &amp; Reports
          </string>
    <string name="download_tr">
            Download transaction details, orders, deliveries
          </string>
    <string name="notificatio">
            Notification Settings
          </string>
    <string name="mute_unmute">
            mute, unmute, set location &amp; tracking setting
          </string>
    <string name="card_bank_a">
            Card &amp; Bank account settings
          </string>
    <string name="change_card">
            change cards, delete card details
          </string>
    <string name="referrals">
            Referrals
          </string>
    <string name="check_no_of">
            check no of friends and earn
          </string>
    <string name="about_us">
            About Us
          </string>
    <string name="know_more_a">
            know more about us, terms and conditions
          </string>
    <string name="log_out">
            Log Out
          </string>
    <string name="add_payment">
            Add Payment method
        </string>
    <string name="notf">
            Notification
        </string>
    <string name="you_have_no">
            You have no notifications
        </string>
    <string name="send_package">
            Send a package
        </string>
    <string name="origin_deta">
                    Origin Details
                </string>
    <string name="address">
                    Address
                </string>
    <string name="state_count">
                    State,Country
                </string>
    <string name="phone_numbe">
                    Phone number
                </string>
    <string name="others">
                    Others
                </string>
    <string name="destination">
                    Destination Details
                </string>
    <string name="add_destina">
                Add destination
            </string>
    <string name="package_det">
                    Package Details
                </string>
    <string name="package_ite">
                    package items
                </string>
    <string name="weight_of_i">
                    Weight of item(kg)
                </string>
    <string name="n50_000">
                    N50,000
                </string>
    <string name="select_deli">
                Select delivery type
            </string>
    <string name="package_inf">
        Package Information
    </string>
    <string name="mbaraugba_o">
            Mbaraugba, Ovom Amaa Asaa, Abia state
        </string>
    <string name="some_id">
            +234 56543 96854
        </string>
    <string name="some_id2">
            +234 70644 80655
        </string>
    <string name="ademola_ala">
            19 Ademola Alabi close, lagos
        </string>
    <string name="other_detai">
            Other details
        </string>
    <string name="package_ite2">
            Package Items
        </string>
    <string name="books_ans_s">
        Books ans stationary, Garri Ngwa
    </string>
    <string name="weight_of_i2">
        Weight of items
    </string>
    <string name="kg">
        1000kg
    </string>
    <string name="tracking_nu">
        Tracking Number
    </string>
    <string name="r_7458_4567">
        R-7458-4567-4434-5854
    </string>
    <string name="charges">
        Charges
    </string>
    <string name="delivery_ch">
        Delivery Charges
    </string>
    <string name="n2_500_00">
        N2,500.00
    </string>
    <string name="worth_of_it">
        Worth of Items
    </string>
    <string name="n50_0002">
        N50,000
    </string>
    <string name="instant_del">
        Instant delivery
    </string>
    <string name="n300_00">
        N300.00
    </string>
    <string name="tax_and_ser">
        Tax and Service Charges
    </string>
    <string name="n200_00">
        N200.00
    </string>
    <string name="package_tot">
        Package total
    </string>
    <string name="n3000_00">
        N3000.00
    </string>
    <string name="button_3_text">
        N3000.00
    </string>
    <string name="edit_packag">
            Edit package
        </string>
    <string name="make_paymen">
            Make payment
        </string>
    <string name="transaction">
            Transaction Successful
        </string>
    <string name="your_rider_">
            Your rider is on the way to your destination
        </string>
    <string name="tracking_nu2">
            Tracking Number R-7458-4567-4434-5854
        </string>
    <string name="tracking_num">
            R-7458-4567-4434-5854
        </string>
    <string name="track_my_it">
            Track my item
        </string>
    <string name="go_back_to_">
                Go back to homepage
            </string>
    <string name="wallet2">
            Wallet
        </string>
    <string name="top_up">
                Top Up
            </string>
    <string name="bank">
                    Bank
                </string>
    <string name="transfer">
                    Transfer
                </string>
    <string name="card">
                    Card
                </string>
    <string name="transaction2">
        Transaction History
    </string>
    <string name="n3_000_00">
                    -N3,000.00
                </string>
    <string name="delivery_fe">
                    Delivery fee
                </string>
    <string name="july_7_20225">
                    July 7, 2022
                </string>
    <string name="add_payment2">
            Add Payment method
        </string>
    <string name="pay_with_wa">
                Pay with wallet
            </string>
    <string name="complete_th2">
                complete the payment using your e wallet
            </string>
    <string name="credit_debi">
                Credit / debit card
            </string>
    <string name="proceed_to_">
            Proceed to pay
        </string>
    <string name="tracking_nu3">
        Tracking Number
    </string>
    <string name="r_7458_45673">
            R-7458-4567-4434-5854
        </string>
    <string name="package_sta">
        Package Status
    </string>
    <string name="courier_req">
                Courier requested
            </string>
    <string name="july_7_2022">
                July 7 2022
            </string>
    <string name="am">
                08:00am
            </string>
    <string name="package_rea">
                Package ready for delivery
            </string>
    <string name="am2">
                08:30am
            </string>
    <string name="package_in_">
                Package in transit
            </string>
    <string name="package_del">
                Package delivered
            </string>
    <string name="view_packag">
            View Package Info
        </string>
    <string name="click_on_de">
        Click on  delivered for successful delivery and rate rider or report missing item
    </string>
    <string name="report">
            Report
        </string>
    <string name="successful">
            Successful
        </string>
    <string name="delivery_su">
            Delivery Successful
        </string>
    <string name="your_item_h">
            Your Item has been delivered successfully
        </string>
    <string name="rate_rider">
        Rate Rider
    </string>
    <string name="add_feedbac">
            Add feedback
        </string>
    <string name="done">
            Done
        </string>
    <string name="search_serv">
            Search services
        </string>
</resources>