<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#f1f1f1">


        <TextView
            android:id="@+id/button_home"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:paddingStart="8dp"
            android:text="@string/home"
            android:textAppearance="@style/home" />

        <TextView
            android:id="@+id/wallet"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:paddingStart="14dp"
            android:text="@string/wallet"
            android:textAppearance="@style/wallet" />

        <TextView
            android:id="@+id/track"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:paddingStart="14dp"
            android:text="@string/track"
            android:textAppearance="@style/track" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:paddingStart="14dp"
            android:text="@string/profile"
            android:textAppearance="@style/profile" />
    </LinearLayout>
</RelativeLayout>